# arxiv-intelligence-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml
docs/: index.html
src/arxiv_mcp/: main.py
src/arxiv_mcp/core/: arxiv_client.py  processor.py  vector_store.py
src/arxiv_mcp/resources/: library.py
src/arxiv_mcp/tools/: ingest.py  rag.py  search.py  semantic_scholar.py
src/arxiv_mcp/utils/: config.py  logger.py
tests/: integration_test.py  test_basic.py
