[project]
name = "arxiv-intelligence-mcp"
version = "0.1.0"
description = "An MCP server for intelligent ArXiv paper research"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Rishi Mule"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "uv",
    "docling",
    "chromadb",
    "arxiv",
    "pydantic",
    "httpx",
    "sentence-transformers",
    "python-dotenv",
    "pydantic-settings",
    "numpy<2"
]

[project.scripts]
arxiv-intelligence-mcp = "arxiv_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp"]


[dependency-groups]
dev = ["pytest", "pytest-asyncio"]
